# rust-actix-crud

./: .env  Cargo.toml
src/: handlers.rs  main.rs  models.rs
