[package]
name = "rust-actix-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
chrono = { version = "0.4.23", features =["serde"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = {version = "1.0.52",features = ["derive"]}
serde_json = "1.0.91"

